@@ -4,6 +4,7 @@
 
 - NEW Remove RightJS, Riot, Steak support (@ujifgc)
 - NEW Allow shortened mailer render calls with default mailer and message names (@ujifgc)
+- FIX delegate padrino and padrino-gen to bundler binstubs
 
 == 0.13.2 (May 9th 2016)
 
